<resources>
    <string name="app_name">proyecto-cuentas-claras</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gastos e ingresos</string>
    <string name="menu_slideshow">Ahorros</string>

    <string name="bienvenido_usuario">Bienvenido usuario</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_logeo">Iniciar sesión</string>
</resources>