<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_inicioBienvenida"
            android:text="@string/bienvenido_usuario"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:layout_marginTop="40dp"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn_registrarse"
            android:text="@string/btn_registrarse"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/btn_logeo"
            android:text="@string/btn_logeo"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"/>

    </LinearLayout>

</RelativeLayout>